2007-10-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-placewindow:): Change window to be
	temporary resizable. Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 
	* Source/x11/XIMInputServer.m: Clean up includes to avoid compiler warning.
	* Source/x11/raster.c (calculateCombineArea): Change parameter
	signedness to avoid compiler warnings.
	* Source/x11/convert.c (convertTrueColor_generic,
	convertPseudoColor_to_8): Change parameter signedness to avoid compiler warnings.
	
2007-10-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontInfo.m
	(-appendBezierPathWithGlyphs:count:toBezierPath:):  First implemenation.
	
2007-10-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSFunction.h: Declare the -getsample:: method in
	header.
	
2007-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/shfill.m (-DPSshfill:): Correct typing error. Remove
	now obsolete method declaration.
	* Headers/gsc/GSFunction.h,
	* Source/gsc/GSFunction.m: New files. Implementation of Postscript
	function taken from art/shfill.m.
	* Source/gsc/GNUmakefile: Compile new file.
	* Source/gsc/GSContext.m (-DPSshfill:), 
	* Source/gsc/GSGState.m (-DPSshfill:): Implement new method.

2007-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Only use cairo 1.4
	functions when cairo version fits.
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:): Use
	depth from window device.

2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m: Add missing include.

2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): No error logging
	when copy of path fails. This is normal in cairo 1.4.10 for empty
	paths.
	
2007-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoGState.h,
	* Source/cairo/CairoGState.m (-setSize, -DPSgsave, -DPSgrestore):
	Remove unused methods.
	* Headers/cairo/CairoPDFSurface.h,
	* Source/cairo/CairoPDFSurface.m: New files.